feat: add PythonScriptExecutor